--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-native-country-picker-modal": "2.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
+    "react-native-razorpay": "^2.3.0",
     "react-native-responsive-dimensions": "3.1.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "4.17.0",
