--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/messaging": "^23.5.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/bottom-tabs": "^7.5.0",
@@ -31,11 +33,13 @@
     "react-native-agora": "^4.5.3",
     "react-native-confirmation-code-field": "8.0.1",
     "react-native-country-picker-modal": "2.0.0",
+    "react-native-device-info": "^14.1.1",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
+    "react-native-permissions": "^5.4.4",
     "react-native-razorpay": "^2.3.0",
     "react-native-responsive-dimensions": "3.1.1",
     "react-native-safe-area-context": "^5.5.2",
