--- a/package.json
+++ b/package.json
@@ -35,19 +35,25 @@
     "react-native-country-picker-modal": "2.0.0",
     "react-native-device-info": "^14.1.1",
     "react-native-fs": "^2.20.0",
+    "react-native-get-random-values": "^1.9.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-image-picker": "^8.2.1",
+    "react-native-incall-manager": "^4.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
     "react-native-permissions": "^5.4.4",
     "react-native-razorpay": "^2.3.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-responsive-dimensions": "3.1.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "4.17.0",
     "react-native-share": "12.2.0",
+    "react-native-sound": "^0.13.0",
     "react-native-svg": "15.14.0",
     "react-native-toast-message": "2.3.3",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^6.18.0",
     "rn-fetch-blob-fixed": "^1.0.1"
   },
   "devDependencies": {
