--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.5",
     "@react-native-firebase/app": "^23.5.0",
@@ -31,6 +32,7 @@
     "react-i18next": "16.0.1",
     "react-native": "0.82.0",
     "react-native-agora": "^4.5.3",
+    "react-native-calendars": "^1.1313.0",
     "react-native-confirmation-code-field": "8.0.1",
     "react-native-country-picker-modal": "2.0.0",
     "react-native-device-info": "^14.1.1",
@@ -41,6 +43,7 @@
     "react-native-incall-manager": "^4.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-orientation-locker": "^1.7.0",
     "react-native-paper": "^5.14.5",
     "react-native-permissions": "^5.4.4",
     "react-native-razorpay": "^2.3.0",
@@ -54,7 +57,9 @@
     "react-native-toast-message": "2.3.3",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^6.18.0",
-    "rn-fetch-blob-fixed": "^1.0.1"
+    "react-native-youtube-iframe": "^2.4.1",
+    "rn-fetch-blob-fixed": "^1.0.1",
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
