--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,10 +80,10 @@ android {
 
     namespace "com.acharyalavbhushan"
     defaultConfig {
-        applicationId "com.ksbm.abastrologer"
+        applicationId "com.ksbm.astrobook"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 19
         versionName "1.0"
     }
     signingConfigs {
@@ -93,23 +93,35 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-    }
-    buildTypes {
-        debug {
-            signingConfig signingConfigs.debug
-        }
-        release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
-            minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            lintOptions {
-                checkReleaseBuilds false
-                abortOnError false
+         release {
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
             }
         }
     }
+buildTypes {
+    debug {
+        signingConfig signingConfigs.debug
+    }
+    release {
+        // ✅ CORRECT: use release signing config
+        signingConfig signingConfigs.release
+
+        minifyEnabled enableProguardInReleaseBuilds
+        proguardFiles getDefaultProguardFile(
+            "proguard-android.txt"
+        ), "proguard-rules.pro"
+
+        lintOptions {
+            checkReleaseBuilds false
+            abortOnError false
+        }
+    }
+}
+
 }
 
 dependencies {
