--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "4.17.0",
     "react-native-share": "12.2.0",
+    "react-native-size-matters": "^0.4.2",
     "react-native-sound": "^0.13.0",
     "react-native-svg": "15.14.0",
     "react-native-toast-message": "2.3.3",
